Updated getSchoolBySchoolName. Reflected all other dependencies. Exploration of token and encryption.

--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,7 @@
 SCHOOLREVIEWS_DB_URI=mongodb+srv://kaisheng:NTUYear2Semester2@cluster0.a03rj.mongodb.net/edUFind?retryWrites=true&w=majority
 SCHOOLREVIEWS_NS=edUFind
 PORT=8080
+
+#JWT - After a login is successful, it gives a token to the user to access services
+JWT_GENERAL_SK=
+JWT_REFRESH_SK=
